--- a/gamer.css
+++ b/gamer.css
@@ -1,3 +1,64 @@
-{
+*{
+    font-family: 'Work Sans';
+}
+
+/*head section*/
+header{
+    margin:0 240px;
+}
+
+.nav-section ,
+.nav-links, 
+.nav-icon-text,
+.nav-logo{ 
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    gap: 20px;
+
+}
+
+.nav-logo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #0B0223;
+    font-size: 45px;
+
+}
+.logo-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #3C354F;
+    font-size: 18px;
     
 }
+.nav-G{
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.logo-text a{
+    color: #3C354F;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 0  20px;
+}
+.nav-icon-text h6{
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    background: rgba(11, 2, 35, 0.10);
+    color: #3C354F;
+    font-size: 18px;
+    font-weight: 500;
+    gap: 20px;
+    padding: 30px;
+}
+
+
+
