--- a/gamer.css
+++ b/gamer.css
@@ -47,6 +47,7 @@ header{
     font-size: 18px;
     font-weight: 500;
     padding: 0  20px;
+    text-decoration: none;
 }
 .nav-icon-text h6{
     display: flex;
@@ -70,6 +71,7 @@ header{
     align-items: center;
     padding: 0 240px ; 
     background-color: whitesmoke;
+
 }
 .main-section-text h2{
     color: #0B0223;
@@ -125,5 +127,44 @@ header{
     border: 1px solid transparent;
     margin: 40px 24px;
 }
+
+/*about-gamer-section*/
+
+.about-gamer-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 240px;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+.about-section-text h1{
+    font-size: 48px;
+    font-weight: 700;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    }
+.about-section-text h6{
+    color: #534C64;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px; 
+}  
+.about-section-text h3{
+    color: #534C64;    
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 45px; 
+}
+.about-section-unleash{
+    color: #534C64;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 45px;
+}
+
+
 
 
