--- a/gamer.css
+++ b/gamer.css
@@ -164,7 +164,79 @@ header{
     font-weight: 700;
     line-height: 45px;
 }
+ 
 
+/*onloine games section*/
 
+.online-games-text{
+    text-align: center;
+}
+.online-games-text h1{
+    font-size: 48px;
+    font-weight: 700
+}
+.online-games-text p{
+    color: #534C64;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+
+}
+.online-funny{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.online-games-img ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 50px 240px;
+    gap: 20px;
+
+}
+.online-games-img h6{
+    color: #534C64;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px; 
+    padding: 24px;
+
+}
+
+/*Features Section*/
+
+.features-section{
+    display: flex;
+    align-items: center ;
+    justify-content: space-between;
+    margin: 120px 240px;
+}
+.features-section-text{
+    text-align: right;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 60px; 
+    padding: 0 120px;
+}
+
+.features-play{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.features-section-text p{
+    color: #534C64;
+    text-align: right;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px; 
+}
 
 
