--- a/gamer.css
+++ b/gamer.css
@@ -211,7 +211,7 @@ header{
 /*Features Section*/
 
 .features-section, 
-.g-section{
+.g-section {
     display: flex;
     align-items: center ;
     justify-content: space-between;
@@ -275,6 +275,50 @@ header{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+
+/*career section*/
+
+.career-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0 20px 0;
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+}
+.career-section-text{
+    padding-left: 240px;
+}
+.positions{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    color: #FFF;
+    line-height: 40px; 
+    
+}
+.career-section-text{
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px; 
+    }
+  .career-section-text h2{
+    color: #FFF;
+    font-size: 48px;
+
+  }
+  .p-btn{
+    display: inline-flex;
+    padding: 21px 40px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 48px;
+     background: #FFF;
+     border: 1px solid transparent;
+     font-size: 20px; 
+     color: #FF42A5;  
+  }
 
 
 
