--- a/gamer.css
+++ b/gamer.css
@@ -320,5 +320,23 @@ header{
      color: #FF42A5;  
   }
 
+.action-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 120px 240px;
+}
 
+.small-card {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+.small-card h6{
+    color: #0B0223;
+    font-size: 20px;
+    font-weight: 600;
+}
 
