--- a/gamer.css
+++ b/gamer.css
@@ -340,3 +340,48 @@ header{
     font-weight: 600;
 }
 
+
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    background: #0B0223;
+    color: white;
+    padding: 50px 0;
+}
+.footer-logo{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+.footer-logo img {
+    height: 50px;
+}
+
+.footer-links ul {
+    display: flex;
+    gap: 10px;
+}
+.footer-links a {
+    text-decoration: none;
+    padding: 10px 20px;
+    color: white;
+}
+
+.img-links {
+    display: flex;
+    gap: 30px;
+}
+
+.conditions {
+    display: flex;
+    gap: 30px;
+}
+.footer-g{
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
