--- a/gamer.css
+++ b/gamer.css
@@ -392,3 +392,20 @@ footer {
     -webkit-text-fill-color: transparent;
 }
 
+
+
+@media screen and (max-width:576px) {
+    .header{
+        flex-direction: column;
+        flex-wrap: wrap;
+        grid-template-columns: repeat(1,1fr);
+
+    }    
+}
+@media  screen and(min-width:577px) and(max-width:992px){
+    .header{
+        grid-template-columns: repeat(2,1fr);
+    }   
+    
+}
+
